# gogoGPCR2

./: .Rprofile  .gitignore  .lintr  .pre-commit-config.yaml  README.md  citation.cff  dx_push.sh  get_started.sh  pyproject.toml
data/misc/: Data_Dictionary_Custom.csv  Data_Dictionary_Custom.txt  Data_Dictionary_ShowCase.txt  GPCR_blocks.tsv  GRCh38_VEP.json
docker/phesant/: Dockerfile  install_packages.R  sources.list
notebooks/: 02_covariates.ipynb  03a_metabolic_phenotypes_BT.py  03a_metabolic_phenotypes_QT.ipynb  03b_metabolic_phenotypes_BT.ipynb  03b_metabolic_phenotypes_QT.py  04a_fix_phesant_QT.ipynb  04b_fix_phesant_BT.ipynb  1_qc_matrixtable.ipynb  Ancestry.ipynb  QC.ipynb  SampleFilters.ipynb  TASR.ipynb  matrixtables.py
notebooks/ProjectG2/: het_only_samples.ipynb
notebooks/TASR/: TASR.ipynb  TASR_phenotypes.ipynb  phenotypes.py
notebooks/WES/: 02_covariates.ipynb  03a_metabolic_phenotypes_BT.ipynb  03a_metabolic_phenotypes_BT.py  03b_metabolic_phenotypes_QT.ipynb  03b_metabolic_phenotypes_QT.py  04_fix_phesant_output.py  04a_fix_phesant_QT.ipynb  04b_fix_phesant_BT.ipynb  1_qc_matrixtable.ipynb  QC.ipynb  README.md
notebooks/WGS/: 00_formating_bgen_sample.ipynb  01_QC_Samples.ipynb  01_QC_Samples_Ancestry.R  01_QC_Samples_PCs.ipynb  01_QC_WGS.ipynb  02_covariates.ipynb  03a_phenotypes_BT.ipynb  03a_phenotypes_BT_PEACOK.ipynb  03b_phenotypes_QT.ipynb  03b_phenotypes_QT_PEACOK.ipynb  04_PHESANT.ipynb  1_QC_WGS.ipynb  2_forest_plots.ipynb  Ancestry.ipynb  DragenBlocksProcessing.ipynb  QC_WGS.ipynb  README.md  SampleFilters.ipynb
notebooks/new_qc/: ARRB2_ind.ipynb
scripts/: 04_run_phesant.sh  1a_regenie_step1_BT.sh  1b_regenie_step1_QT.sh  2_regenie_step2_interaction_BT.sh  2_regenie_step2_interaction_QT.sh  step2_newer.sh  step2_old.sh
src/: fields.py  matrixtables.py  phenotypes.py  results.py
(+25 files in other folders)
