[project]
name = "gogogpcr2"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "jsture", email = "jakobsturemadsen@gmail.com" }
]
dependencies = [
    "hail==0.2.116",
    "numpy==1.23.5",
    "scipy==1.9.3",
    "jupyterlab>=4.2.5",
    "pre-commit>=3.8.0",
    "dxdata>=0.0.1",
    "dxpy>=0.381.0",
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gogogpcr2"]
