[project]
name = "gogogpcr2"
version = "0.1.0"
authors = [
    { name = "jsture", email = "jsmadsen@sund.ku.dk" }
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "dxpy==0.396.0",
    "hail==0.2.132",
    "jupyterlab==3.6.1",
    "pandas==2.2.3",
    "pre-commit>=4.3.0",
]
